# openworld-selena

./: .gitignore  Cargo.toml  README.md  settings.json
ai_templates/: EntityAction.md  property_docs.md
code/: _test_merge_relations.py  _test_regex_repair_bucket.py  merge_relations.py  normalize_stats.py  ow_sanity_check.py
docs/: SAVE_FILE_VERSIONING.md  World.rs.md  WorldEntity.rs.md  faction_mapping_v1.md  llm-context.md  lore-fields.md  main.rs.md  persistence.rs.md  property-catalog.md  world-mechanics.md  world_entities.md  world_events.md  world_lore.md
scripts/: apply_faction_mapping.py  backfill_history.py  clean_messed_properties.py  cleanup_old_marker_key.py  extract_properties.py  generate_lore_md.py  lore_data.py  populate_lore.py  replace_history_summary.py  seed_default_world_events.py
src/: main.rs  scheduler.rs
src/world_data/: World.rs  WorldEntity.rs  action_history_log.rs  context_builder.rs  entity_history.rs  history_persistence.rs  internal_properties.rs  mod.rs  persistence.rs  tick_time.rs  time_system.rs
web-client/: index.html  movements.html  styles.css
